--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,6 @@
 :root {
   --background-color: #0f172a;
+  --project-background-color: #1e293b;
   /* Text-color */
   --text-color-primary: #f8fafc;
   --text-color-secondary: #cbd5e1;
@@ -8,6 +9,9 @@
   /* Gradient */
   --text-color-primary-gradient: #22d3ed;
   --text-color-secondary-gradient: #0ea5e9;
+
+  --green-color-primary-gradient: #10b981;
+  --green-color-secondary-gradient: #bef264;
 
   /* font */
   --font-family: "Roboto", sans-serif;
@@ -51,7 +55,8 @@ body {
 /* Header Styling */
 
 header,
-.hero__section {
+.hero__section,
+.project__section {
   padding: 1em 5.7em;
 }
 
@@ -99,7 +104,10 @@ li a {
 /* Hero Section Styling */
 
 .hero__section {
+  width: 100%;
   margin-top: 4em;
+  display: flex;
+  justify-content: space-between;
 }
 
 .hero__text {
@@ -108,7 +116,8 @@ li a {
   gap: 1.5em;
 }
 
-.hero__h1 {
+.hero__h1,
+.project__h1 {
   font-size: 2rem;
   font-weight: 700;
 }
@@ -137,14 +146,49 @@ li a {
   display: flex;
 }
 
-.hero__socialIcons:nth-child(1) {
-  margin-left: -2.8em;
+.social-icons {
+  width: 150px;
+  height: 150px;
+  margin-left: -3.5em;
 }
 
-.social-icons {
-  width: 120px;
-  height: 120px;
-  /* margin-left: -2.8em; */
+.hero__illu {
+  width: 300px;
+  height: 300px;
+}
+
+/* Project Section Styling */
+
+.project__div {
+  background-color: var(--project-background-color);
+  margin-top: 6em;
+  padding: 0.7em;
+  border-radius: 10px;
+  display: flex;
+  gap: 3em;
+  align-items: center;
+}
+
+.project__illu-one {
+  width: 200px;
+  height: auto;
+  /* height: 300px; */
+}
+
+.header__btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  margin-bottom: 0.8em;
+}
+
+.green-img {
+  height: 28px;
+}
+
+.project__p {
+  line-height: 1.6;
+  color: var(--text-color-secondary);
 }
 
 /* Mobile View */
@@ -215,11 +259,35 @@ li a {
   }
 
   .hero__section {
+    width: 100%;
     margin-top: 2em;
+    padding: 1em;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+  }
+
+  .hero__text {
+    width: 98%;
+  }
+
+  .hero__p br,
+  .project__p br {
+    display: none;
+  }
+  /* Project Section Styling */
+  .project__section {
     padding: 1em;
   }
 
-  .hero__p br {
-    display: none;
+  .project__div {
+    margin-top: 4em;
+    padding: 1em;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
   }
 }
