--- a/blog.css
+++ b/blog.css
@@ -159,9 +159,16 @@ li a {
 
 /* Project Section Styling */
 
+.projects__div {
+  margin-top: 6em;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
 .project__div {
   background-color: var(--project-background-color);
-  margin-top: 6em;
+
   padding: 0.7em;
   border-radius: 10px;
   display: flex;
@@ -171,6 +178,12 @@ li a {
 
 .project__illu-one {
   width: 200px;
+  height: auto;
+  /* height: 300px; */
+}
+
+.project__illu-three {
+  width: 190px;
   height: auto;
   /* height: 300px; */
 }
@@ -282,7 +295,7 @@ li a {
   }
 
   .project__div {
-    margin-top: 4em;
+    /* margin-top: 4em; */
     padding: 1em;
     border-radius: 10px;
     display: flex;
