--- a/blog.css
+++ b/blog.css
@@ -40,6 +40,8 @@ body {
   font-style: var(--font-style);
   background-color: var(--background-color);
   color: var(--text-color-primary);
+  width: 100%;
+  scroll-behavior: smooth;
 }
 
 /* main {
@@ -56,7 +58,8 @@ body {
 
 header,
 .hero__section,
-.project__section {
+.project__section,
+.posts__section {
   padding: 1em 5.7em;
 }
 
@@ -117,7 +120,8 @@ li a {
 }
 
 .hero__h1,
-.project__h1 {
+.project__h1,
+.posts__h1 {
   font-size: 2rem;
   font-weight: 700;
 }
@@ -202,6 +206,35 @@ li a {
 .project__p {
   line-height: 1.6;
   color: var(--text-color-secondary);
+}
+
+/* Posts Styling */
+.posts__section {
+  margin-top: 4em;
+}
+
+.header__posts {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.all_posts1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
+}
+
+.posts_text {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--text-color-primary);
+}
+
+.arrow {
+  width: 2em;
+  height: 2em;
 }
 
 /* Mobile View */
@@ -289,8 +322,10 @@ li a {
   .project__p br {
     display: none;
   }
+
   /* Project Section Styling */
-  .project__section {
+  .project__section,
+  .posts__section {
     padding: 1em;
   }
 
@@ -302,5 +337,21 @@ li a {
     flex-direction: column;
     gap: 1em;
     align-items: center;
+  }
+
+  /* Posts Section Styling */
+  /* .posts__section {
+    padding: 1em;
+  } */
+
+  .header__posts {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+  }
+
+  .all_posts1 {
+    display: none;
   }
 }
