--- a/blog.css
+++ b/blog.css
@@ -60,7 +60,7 @@ header,
 .hero__section,
 .project__section,
 .posts__section {
-  padding: 1em 5.7em;
+  padding: 1em 6em;
 }
 
 .nav-center {
@@ -237,7 +237,48 @@ li a {
   height: 2em;
 }
 
-/* Mobile View */
+.all_posts1:hover {
+  cursor: pointer;
+}
+
+.articles__posts {
+  margin-top: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  flex-wrap: wrap;
+}
+
+article {
+  background-color: var(--project-background-color);
+  width: 17em;
+  border: 0px solid transparent;
+  border-radius: 15px;
+}
+
+.article__img {
+  width: 100%;
+  height: 14em;
+}
+
+.article_texts {
+  text-align: center;
+  padding: 1em 1em 1.5em 1em;
+}
+
+.article_date {
+  font-size: 0.9rem;
+  color: var(--text-color-tertiary);
+  margin: 0.8em 0 1em 0;
+}
+
+.article_p {
+  color: var(--text-color-primary);
+  font-size: 0.9rem;
+}
+
+/* Mobile View and Tablet View */
 
 @media screen and (max-width: 768px) {
   header {
@@ -326,7 +367,7 @@ li a {
   /* Project Section Styling */
   .project__section,
   .posts__section {
-    padding: 1em;
+    padding: 3em;
   }
 
   .project__div {
@@ -344,14 +385,34 @@ li a {
     padding: 1em;
   } */
 
-  .header__posts {
+  /* .header__posts {
     display: flex;
-    flex-direction: column;
+    flex-direction: ;
     justify-content: start;
     align-items: start;
+  } */
+
+  /* article {
+    width: 80%;
+  } */
+}
+
+/* Mobile View  */
+
+@media screen and (max-width: 640px) {
+  /* Shared Styles*/
+  .project__section,
+  .posts__section {
+    padding: 2em;
   }
 
   .all_posts1 {
     display: none;
+  }
+
+  .articles__posts {
+    flex-direction: column;
+    gap: 2em;
+    flex-wrap: wrap;
   }
 }
